<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/Options">

        <menu>
            <item
                android:id="@+id/HomeClient"
                android:icon="@drawable/home_ico"
                android:title="@string/HomeClient" />
        </menu>
    </item>

    <item android:title="@string/MoreOptions">

        <menu>
            <item
                android:id="@+id/AboutUs"
                android:icon="@drawable/about_ico"
                android:title="@string/AboutUs" />
            <item
                android:id="@+id/Share"
                android:icon="@drawable/share_ico"
                android:title="@string/Share" />
        </menu>
    </item>
</menu>